--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,9 @@ body{
     transition: all 0.5s ease;
 }
 
-.home img{
-    float: left;
-    color: azure;
+img{
+    width: 300px;
+    margin: 30px;
 }
 
 .home-content p{
