--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background: rgb(128, 128, 185);
+    background: hsl(212, 45%, 89%)
 }
 .topnav{
     overflow: hidden;
@@ -7,7 +7,7 @@ body{
     display: flex;
     background-color: black;
     justify-content:space-around;
-    text-align: right;
+    text-align: left;
     margin-bottom: 10px;
     border-radius: 10px;
     padding: 10px;
@@ -29,10 +29,9 @@ body{
 img{
     width: 200px;
     border: 1px solid black;
-    border-radius: 50%;
     text-align: left;
-    height: 50vh;
-    margin: 3% auto;
+    margin: auto;
+    border-radius: 30px 5px  5px 5px;
 }
 
 .home-content p{
